# SchoolMNG

./: .env.development  .gitignore  AGENTS.md  DEVELOPMENT_PROCESS.md  HANDOFF.md  build-log.txt  dropoff.md  electron-builder.yml  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tauri-build.bat  tauri-dev.bat  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: release.yml
convex/: admin.ts  admins.ts  analytics.ts  attendance.ts  auth.config.ts  backfill_streams.ts  backfill_streams_helpers.ts  books.ts  borrowings.ts  classes.ts  clerk.ts  clerkWebhook.ts  crons.ts  events.ts  exams.ts  feature_configurations.ts  files.ts  fines.ts  helpers.ts  http.ts  inventory.ts  invitations.ts  members.ts  reports.ts  schema.ts  schools.ts  streams.ts  students.ts  subjects.ts  subscriptions.ts  teachers.ts  terms.ts  timetable.ts  webhooks.ts
convex/_generated/: api.d.ts
convex/lib/: logger.ts
docs/: security-analysis.md
electron/: main.js  preload.js
public/: template.csv
scripts/: build-static.js  check-binary-keys.js  check-build-keys.js  fix-clerk-shared.mjs  release.ps1
src/: instrumentation-client.ts  proxy.ts
src-tauri/: .tauri-signing-key.txt.pub  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: clerk-provider-with-router.tsx  convex-client-provider.tsx  dashboard-layout.tsx  require-auth.tsx  school-selector.tsx  school-theme-provider.tsx
(+52 files in other folders)
