[package]
name = "school-library-manager"
version = "0.1.2"
description = "School Library Manager Desktop App"
authors = ["levarlux"]
edition = "2021"

[lib]
name = "school_library_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
dirs = "6"
url = "2"
